api/swimos_form/src/tests/derive/form/invalid_tag_placement_enum.stderr
error: Unrecognized attribute for 'form'.
  --> src/tests/derive/form/invalid_tag_placement_enum.rs:19:12
   |
19 |     #[form(tag = "Enumeration")]
   |            ^^^^^^^^^^^^^^^^^^^
